--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-ci":"CI=true react-scripts build" ,
     "test": "react-scripts test --env=jsdom",
+    "test-ci":"CI=true react-scripts test",
     "eject": "react-scripts eject"
   }
 }
